--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,10 @@
-# Prerequisites
-*.d
+# compiled
+*.elc
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Packaging
+.cask
 
-# Precompiled Headers
-*.gch
-*.pch
+# emacs auto generated files
+*.el~
+*.sh~
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
